fixed display overflow css

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,5 +3,6 @@
 */
 
 $blank_color: #ffffff;
+$calculator-color: rgba(100,100,120,1);
 $mobile-break: 768px;
-$screen-height: 110px;
+$screen-height: 170px;
